--- a/new/frontend/src/index.html
+++ b/new/frontend/src/index.html
@@ -2,7 +2,7 @@
 <html data-bs-theme="dark" lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Frontend</title>
+    <title>Data dashboard</title>
     <base href="/">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="favicon.ico" rel="icon" type="image/x-icon">
